Adds 'Concorrência e Alternativas' and File by Topic

--- a/main.tex
+++ b/main.tex
@@ -15,34 +15,34 @@
 
 \vfill
 
-\Large{ André Santos pg25329\\Daniel Carvalho a61008\\Ricardo Branco pg25339}\par
+\Large{André Santos pg25329\\Daniel Carvalho a61008\\Ricardo Branco pg25339}\par
 
 \vspace*{3\baselineskip}
 \endgroup}
 
 \begin{document} 
 
-\section{Resumo}
+\input{resumo}
 \newpage
 
 \tableofcontents
 \newpage
 
-\section{Introdução}
-\section{Plano de trabalho}
-\section{Análise do problema}
-\section{Análise de requisitos}
-\section{Casos de estudo}
-\section{Arquitetura do sistema}
-\section{Modelo de dados}
-\section{Repositório de informação}
-\section{Funcionalidades do sistema}
-\section{Protótipos para a interface da aplicação}
-\subsection{Primeiros protótipos}
-\subsection{Protótipos fidedignos}
-\section{Proposta tecnológica}
-\section{Estado do desenvolvimento}
-\section{Conclusão}
-\section{Anexos}
+\input{introducao}
+\input{plano_de_trabalho}
+\input{analise_do_problema}
+\input{analise_de_requisitos}
+\input{concorrencia_e_alternativas}
+\input{casos_de_estudo}
+\input{arquitetura_do_sistema}
+\input{modelo_de_dados}
+\input{repositorio_de_informacao}
+\input{funcionalidades_do_sistema}
+\input{prototipos}
+\input{proposta_tecnologica}
+\input{estado_do_desenvolvimento}
+\input{conclusao}
+\input{anexos}
+\input{bibliografia}
 
 \end{document}
