Adiciona texto introdutivo ao plano de trabalho

--- a/plano_de_trabalho.tex
+++ b/plano_de_trabalho.tex
@@ -1,1 +1,13 @@
 \section{Plano de trabalho}
+Tendo em conta a dimensão da aplicação foi criado um plano de trabalho onde mapeámos as tarefas
+de desenvolvimento no tempo de forma contínua tornado assim possível adaptar um ritmo de trabalho
+consistente com os prazos de entrega de cada fase e então cumprir as metas do projecto.
+Nesse sentido dividimos o projecto em três fases, sendo elas a análise de requisitos, o
+desenvolvimento e a documentação.
+No que diz respeito à análise de requitos, esta fase engloba todo o levantamento 
+de funcionalidades assim como todo o planeamento e estruturação do projecto como
+criação de modelos de domínio, diagramas de classes, modelação do repositório de dados,
+análise da concorrência, plano tecnológico, etc.
+Para esta fase de análise e modelação foi criado um plano de um mês onde todas as tarefas 
+teriam de estar concluídas. Na imagem seguinte é possível ver um diagrama de gannt com
+o planeamento inicial.
