--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[portuges]{babel}
 \usepackage[svgnames]{xcolor}
+\usepackage{graphicx}
 
 \newcommand*{\plogo}{\fbox{$\mathcal{PL}$}}
 \newcommand*{\titleTH}{\begingroup
