First Version of 'Proposta Tecnológica'

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,14 @@
-\documentclass{article}
+\documentclass[12px]{article}
 \usepackage[utf8x]{inputenc}
 \usepackage[portuges]{babel}
 \usepackage[svgnames]{xcolor}
+\usepackage{graphicx}
+\usepackage{hyperref}
+\usepackage{a4wide}
+\usepackage{float}
+
+\usepackage{enumitem}
+\setdescription{leftmargin=\parindent,labelindent=\parindent}
 
 \newcommand*{\plogo}{\fbox{$\mathcal{PL}$}}
 \newcommand*{\titleTH}{\begingroup
