--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \usepackage{float}
 \usepackage[export]{adjustbox}
 \usepackage{spverbatim}
+\usepackage{hyperref}
 
 \usepackage{enumitem}
 \setdescription{leftmargin=\parindent,labelindent=\parindent}
