Altera estrutura da directoria das imagens e corrige gannt_1.png

--- a/plano_de_trabalho.tex
+++ b/plano_de_trabalho.tex
@@ -1,12 +1,12 @@
 \section{Plano de trabalho}
-Tendo em conta a dimensão da aplicação foi criado um plano de trabalho onde mapeámos as tarefas
+Tendo em conta a dimensão da aplicaçãoewf,,,,,,,,,,,,,,,,,,, foi criado um plano de trabalho onde mapeámos as tarefas
 de desenvolvimento no tempo de forma contínua tornado assim possível adaptar um ritmo de trabalho
 consistente com os prazos de entrega de cada fase e então cumprir as metas do projecto.
 Nesse sentido dividimos o projecto em três fases, sendo elas o planeamento e análise de requisitos, o
 desenvolvimento e a documentação.
 No que diz respeito à fase de planeamento e análise de requisitos, esta fase engloba todo o levantamento 
 de funcionalidades assim como todo o planeamento e estruturação do projecto como
-criação do modelo de domínio, diagramaa de classes, modelação do repositório de dados,
+criação do modelo de domínio, diagrama de classes, modelação do repositório de dados,
 análise da concorrência, plano tecnológico, etc.
 Para esta fase de planeamento, análise e modelação foi criado um plano de um mês onde todas as tarefas 
 teriam de estar concluídas. Na imagem seguinte é possível ver um diagrama de Gannt com
