Removes 'Modelo de Domínio'

--- a/arquitetura_do_sistema.tex
+++ b/arquitetura_do_sistema.tex
@@ -9,7 +9,7 @@ O nosso sistema será construido seguindo as orientações do modelo OAIS \texti
   \label{fig:oais}
 \end{figure}
 
-Como representado na Figura ~\ref{fig:oais}, o sistema irá interagir com três tipos distintos de actores:
+Como representado na Figura ~\ref{fig:oais}, o sistema irá interagir com três tipos distintos de atores:
 \begin{description}[labelindent=1cm]
   \item[Produtores] que serão representados pelos Alunos.
   \item[Administrador] que serão representados pelos Docentes.
@@ -22,23 +22,9 @@ E será constituido por três mega processos:
   \item[Disseminação] responsável pela disseminação, distribuição e publicação dos objetos arquivados.
 \end{description}
 
-\subsection{Modelo de Domínio}
-
-Um dos primeiros passos na planificação do nosso sistema passou pela definição do \textbf{Modelo de Domínio}.
-Podemos classificar como domínio do nosso sistema, o conjunto de características que descrevem a família de problemas que a nossa aplicação pretende solucionar.
-
-Podemos consultar na Figura ~\ref{fig:modelo-dominio} os termos do nosso sistema e as relações existentes entre esses termos.
-
-\begin{figure}[H] 
-  \centering
-  \includegraphics[width=1\textwidth,center]{images/arquitetura/modelo-dominio}
-  \caption{Modelo de domínio}
-  \label{fig:modelo-dominio}
-\end{figure}
-
 \subsection{Fluxo do Sistema}
 
-De seguida optamos por fazer um primeiro esboço do fluxo do nosso sistema, construimos um \textbf{Diagrama de Atividade} que de uma forma pouco pormenorizada demonstra sequencialmente as principais ações dos utilizadores do sistema.
+Com o objetivo de perceber e organizar melhor o fluxo do nosso sistema, construimos um \textbf{Diagrama de Atividade} que de uma forma pouco pormenorizada demonstra sequencialmente as principais ações dos utilizadores do sistema. De notar que este diagrama será importante para perceber a ligação entre os vários utilizadores e as ações dependentes entre estes.
 
 Com o \textbf{Diagrama de Atividade} da Figura ~\ref{fig:diagrama-blocos}, podemos consultar de forma simplificada o fluxo do nosso sistema.
 
