--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,15 @@
-\documentclass{article}
+\documentclass[12px]{article}
 \usepackage[utf8x]{inputenc}
 \usepackage[portuges]{babel}
 \usepackage[svgnames]{xcolor}
+\usepackage{graphicx}
+\usepackage{a4wide}
+\usepackage{float}
+\usepackage[export]{adjustbox}
+\usepackage{spverbatim}
+
+\usepackage{enumitem}
+\setdescription{leftmargin=\parindent,labelindent=\parindent}
 
 \newcommand*{\plogo}{\fbox{$\mathcal{PL}$}}
 \newcommand*{\titleTH}{\begingroup
@@ -21,6 +29,10 @@
 \endgroup}
 
 \begin{document} 
+
+\pagestyle{empty}
+\titleTH
+\newpage
 
 \input{resumo}
 \newpage
