--- a/primeiros_prototipos.tex
+++ b/primeiros_prototipos.tex
@@ -41,7 +41,15 @@ Na paindel de pesquisa de projetos(Figura ~\ref{fig: projetospublicos}), todos o
 \end{figure}
 
 
-Quando dentro de uma 
+Quando dentro do painel de um projeto, um docente pode:
+
+\begin{itemize}
+	\item Adicionar um enunciado, tal como outros ficheiros
+	\item Gerir os grupos criados dentro do projeto
+	\item Gerir as fases do projeto
+	\item Consultar as submissões feitas até ao momento
+\end{itemize}
+tal como se pode ver na Figura ~\ref{fig: painelprojetodocente}.\\
 
 \begin{figure}[htbp] 
         \centering
@@ -50,6 +58,8 @@ Quando dentro de uma
          \label{fig: painelprojetodocente}
 \end{figure}
 
+Um aluno apenas pode consultar as informações dadas pelos os docente, fazer a gestão do seu grupo e aceder a página de submissão de um projeto, como é possivel ver na Figura ~\ref{fig: painelprojetoaluno}.\\
+
 \begin{figure}[htbp] 
         \centering
         \includegraphics[width=1\textwidth]{images/prototipos/mockups/painelprojetoaluno.png}
@@ -57,7 +67,15 @@ Quando dentro de uma
          \label{fig: painelprojetoaluno}
 \end{figure}
 
+Quando se visualiza um projeto, e de acordo com a Figura ~\ref{fig: projetoaluno}, pode-se aceder diretamente ao enunciado e relatório do projeto, ver e fazer \emph{Dowload} individual ou global(Ficheiro \emph{ZIP}) dos ficheiros submetidos, também é disponibilizado um resumo sob o trabalho feito, assim como a nota deste caso exsita.Se for um docente responsavel pela disciplina em que se enquadra o projeto a aceder a página, este pode fazer a avaliação do grupo, ou de cada membro individual e adicionar comentários sob a nota dada, tal como podemos ver na Figura ~\ref{fig: projetodocente}.\\
 
+
+\begin{figure}[htbp] 
+        \centering
+        \includegraphics[width=1\textwidth]{images/prototipos/mockups/projetovisitante.png}
+         \caption{Entrega vista por um visitante}
+         \label{fig: projetoaluno}
+\end{figure}
 
 
 \begin{figure}[htbp] 
@@ -68,12 +86,6 @@ Quando dentro de uma
 \end{figure}
 
 
-\begin{figure}[htbp] 
-        \centering
-        \includegraphics[width=1\textwidth]{images/prototipos/mockups/projetovisitante.png}
-         \caption{Entrega vista por um visitante}
-         \label{fig: projetoaluno}
-\end{figure}
 
 
 
