--- a/modelo_de_dados.tex
+++ b/modelo_de_dados.tex
@@ -22,7 +22,7 @@ Para representar a estrutura e relações das classes que servirão de modelo pa
 
 Este tipo de diagramas permitem verificar como cada classe se relaciona com as outras, tendo como objetivo, a satisfação dos requisitos funcionais definidos para o sistema em estudo. 
 
-Na Figura ~\ref{fig:diagrama-classes} pode-se ver representadas todas as classes e as suas relações que servirão como modelo para os objetos do sistema.
+Na Figura ~\ref{fig:diagrama-classes} podem-se ver representadas todas as classes e as suas relações que servirão como modelo para os objetos do sistema.
 
 \begin{figure}[H] 
   \centering
