--- a/arquitetura_do_sistema.tex
+++ b/arquitetura_do_sistema.tex
@@ -13,7 +13,7 @@ Como representado na Figura ~\ref{fig:oais}, o sistema irá interagir com três 
 \begin{description}[labelindent=1cm]
   \item[Produtores] que serão representados pelos Alunos.
   \item[Administrador] que serão representados pelos Docentes.
-  \item[Consumidor] que serão representados pelos Utilizadores não Registados.
+  \item[Consumidor] que serão representados por todos os utilizadores do sistema, registados ou não.
 \end{description}
 E será constituido por três mega processos:
 \begin{description}[labelindent=1cm]
