--- a/proposta_tecnologica.tex
+++ b/proposta_tecnologica.tex
@@ -4,8 +4,7 @@ Para o desenvolvimento do nosso sistema, precisamos de combinar um vasto conjunt
 simplificar o desenvolvimento de todas as funcionalidades propostas.
 
 De forma a organizar o fluxo de trabalho do grupo, utilizamos o \href{https://trello.com/}{\textbf{Trello}}, 
-que é um sistema para gestão de tarefas que segue o método \textit{kanban}, muito usado no desenvolvimento com \textit{Scrum}. 
-
+que é um sistema para gestão de tarefas que segue o método \textit{kanban}.
 \begin{figure}[H] 
   \centering
   \includegraphics[width=1\textwidth]{images/tecnologias/trello}
@@ -43,7 +42,7 @@ que pode ser representado pela figura ~\ref{fig:git-workflow}.
   \label{fig:git-workflow}
 \end{figure}
 
-Rlativamente ao desenvolvimento, utilizaremos \href{http://rubyonrails.org/}{\textbf{Ruby on Rails}}, 
+Relativamente ao desenvolvimento, utilizaremos \href{http://rubyonrails.org/}{\textbf{Ruby on Rails}}, 
 que é uma \textit{framework open-source} escrita em \textbf{Ruby}, otimizada para a produtividade sustentável. 
 A \textit{framework} tem uma forte comunidade que defende conceitos como \textbf{DRY} \textit{(Don't Repeat Yourself)} 
 e \textbf{\textit{Convention over configuration}}.
@@ -76,9 +75,9 @@ Pretendemos melhorar a nossa produtividade, e melhorar a legibilidade do código
   \item[\href{http://coffeescript.org/}{CoffeeScript}] para JavaScript.
 \end{description} 
 
-Utilizaremos também a \textit{framework} de \textit{front-end} \href{http://getbootstrap.com/}{\textbf{Twitter Bootstrap}} 
-para ajudar a construirmos um serviço multi-plataforma e para reutilizarmos alguns componentes. 
-E a biblioteca de Javascript \href{http://jquery.com/}{\textbf{JQuery}} para simplificar os \textit{scripts client side} que interagem com o HTML.\\
+Utilizaremos a \textit{framework} de \textit{front-end} \href{http://getbootstrap.com/}{\textbf{Twitter Bootstrap}} 
+para ajudar a construirmos um serviço multi-plataforma e para reutilizarmos alguns componentes.
+Para além disso também utilizaremos a biblioteca de Javascript \href{http://jquery.com/}{\textbf{JQuery}} para simplificar os \textit{scripts client side} que interagem com o HTML.\\
 
 Para manipulação de documentos \textbf{XML}, utilizaremos as tecnologias lecionadas, tais como: \textbf{DTD}, \textbf{XSLT} e \textbf{XSD}.\\
 
