primeiros prototipos identação

--- a/primeiros_prototipos.tex
+++ b/primeiros_prototipos.tex
@@ -3,13 +3,14 @@
 Um dos processos de desenvolvimento de uma Aplicação Web é a criação de protótipos (\emph{Mockups}) que demostre de que forma o utilizador interage com a aplicação.A facilidade de navegação e as interações necessárias para a transição entre duas páginas são cruciais para que a aplicação tenha êxito e seja usada mais vezes pelos utilizadores. \\
 Durante a produção dos primeiros protótipos, teve-se como objetivo identificar de que formas as várias funcionalidades do sistemas iriam estar presentes na aplicação, sem haver preocupações com questões estéticas.Este protótipos foram desenvolvidos usanto a aplicação \href{http://balsamiq.com/products/mockups/}{\emph{Balsamiq Mockups}}(Figura ~\ref{fig: balsamiq}).\\
 
-\begin{figure}[htbp]
+ \begin{figure}[htbp]
         \centering
         \includegraphics[width=1\textwidth]{images/prototipos/mockups/balsamiq.png}
          \caption{\emph{Balsamiq Mockups}}
          \label{fig: balsamiq}
 \end{figure}
 
+%Introdução a falar dos mockups feitos
 Sobre os prótipos feitos, teve-se como preocupação a simplicidade da pagina, a quantidade de informação e o tempo de navegação, isto é a quantidade de ações que um utilizador tem que fazer para passar de uma página para outra.\\
 Começando pela página inicial (Figura ~\ref{fig: home}) está mostra as várias funcionalidades da aplicação, fazendo a distinção entre alunos e docentes.A partir da pagina inicial o utilizador pode fazer efectuar registo, login ou procura projetos públicos. \\
 
