Adiciona novos diagramas e altera textos

--- a/anexos.tex
+++ b/anexos.tex
@@ -1,1 +1,8 @@
 \section{Anexos}
+
+\begin{figure}[htbp!] 
+	\centering
+	\includegraphics[width=1\textwidth,angle=90]{images/plano_de_trabalho/gannt_0.png}
+ 	\caption{Diagrama de Gannt completo}
+ 	\label{fig: workplan0}
+\end{figure}
